# text_mining_project

./: .env.example  .gitignore  Project Guidelines - Text Mining 2025-2026 v1.md  README.md  main.py  pred_10.csv  pyproject.toml  report_10.md  requirements.txt
notebooks/: agent_10.ipynb  tm_final_10.ipynb  tm_tests_10.ipynb  workflow.ipynb
reports/: classification_models.md  data_exploration.md  feature_engineering.md  preprocessing_quality_assessment.md
src/: __init__.py  features.py  models.py  plotting.py  preprocessing.py
tests/: __init__.py  test_models.py
