[project]
name = "text-mining-project"
version = "0.1.0"
description = "Notebook-driven text mining workspace with reusable preprocessing helpers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel==7.2.0",
    "matplotlib==3.10.9",
    "nltk==3.9.4",
    "pandas==3.0.3",
    "pykernel==0.1.6",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
]

[tool.uv]
add-bounds = "exact"
exclude-newer = "7 days"
