[project]
name = "text-mining-project"
version = "0.1.0"
description = "Notebook-driven text mining workspace with reusable preprocessing helpers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv==0.9.9",
    "gensim==4.4.0",
    "ipykernel==7.2.0",
    "matplotlib==3.10.9",
    "nltk==3.9.4",
    "numpy==2.4.6",
    "openai==2.38.0",
    "pandas==3.0.3",
    "pykernel==0.1.6",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "sentence-transformers==5.5.1",
    "torch==2.12.0",
    "transformers==5.9.0",
    "wordcloud==1.9.6",
]

[tool.uv]
add-bounds = "exact"
exclude-newer = "7 days"
